# RayTracerV2

./: .gitignore  CMakeLists.txt  README.md  image.ppm  test.txt
include/: Camera.h  Canvas.h  Computation.h  Computations.h  Containers.h  ExtVec3.h  Intersection.h  Intersections.h  Light.h  Material.h  Parser.h  Pattern.h  Plane.h  Ray.h  Shape.h  Sphere.h  Timer.h  World.h  myMath.h
include/Pattern/: BlendedPtn.h  CheckerPtn.h  GradientPtn.h  Pattern.h  RingPtn.h  SolidPtn.h  StripePtn.h  TestPtn.h
include/Shape/: Cone.h  Cube.h  Cylinder.h  Group.h  Plane.h  Shape.h  SmoothTriangle.h  Sphere.h  Triangle.h
main/: CMakeLists.txt  main.cpp
src/: BlendedPtn.cpp  CMakeLists.txt  Camera.cpp  Canvas.cpp  CheckerPtn.cpp  Computation.cpp  Computations.cpp  Cone.cpp  Containers.cpp  Cube.cpp  Cylinder.cpp  ExtVec3.cpp  GradientPtn.cpp  Group.cpp  Intersection.cpp  Intersections.cpp  Light.cpp  Material.cpp  Parser.cpp  Pattern.cpp  Plane.cpp  Ray.cpp  RingPtn.cpp  Shape.cpp  SmoothTriangle.cpp  SolidPtn.cpp  Sphere.cpp  StripePtn.cpp  TestPtn.cpp  Timer.cpp  Triangle.cpp  World.cpp
test/: CMakeLists.txt  test.cpp
